tests/baselines/reference/parserSetAccessorWithTypeAnnotation1(strict=true).errors.txt
parserSetAccessorWithTypeAnnotation1.ts(2,8): error TS1095: A 'set' accessor cannot have a return type annotation.
parserSetAccessorWithTypeAnnotation1.ts(2,8): error TS7032: Property 'foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
parserSetAccessorWithTypeAnnotation1.ts(2,12): error TS7006: Parameter 'v' implicitly has an 'any' type.


==== parserSetAccessorWithTypeAnnotation1.ts (3 errors) ====
    class C {
       set foo(v): number {
           ~~~
!!! error TS1095: A 'set' accessor cannot have a return type annotation.
           ~~~
!!! error TS7032: Property 'foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
               ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
       }
    }